# BRAINWORMS

./: .dir-locals.el  .gitignore  .gitmodules  Cargo.toml  README.org  flake.nix  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml
assets/: Bedroom.blend  Bedroom.blend1  Bedroom.glb  LinacLab.blend  LinacLab.blend1  LinacLab.glb
assets/gltf_scenes/: LinacLab.glb
assets/inochi2d-models/: Midori.inp  README.md
brainworms_arson/: Cargo.toml
brainworms_arson/src/: lib.rs
brainworms_demented_robotic_meat_grinder_machine/: Cargo.toml
brainworms_demented_robotic_meat_grinder_machine/src/: lib.rs
brainworms_farting_noises/: Cargo.toml
brainworms_farting_noises/src/: lib.rs  prison_for_retarded_mozilla_dog_shit.rs
brainworms_lib/: Cargo.toml
brainworms_lib/src/: lib.rs
brainworms_lib/src/the_great_mind_palace_of_theatrical_arts/: play.rs  ticket_office.rs
brainworms_lib/src/the_great_mind_palace_of_theatrical_arts/basement/: cla.rs  debug_profiling_etc.rs  frame_rate.rs  input_handling.rs  text_files.rs
brainworms_lib/src/the_great_mind_palace_of_theatrical_arts/play/: backstage.rs  curtain.rs  orchestra.rs  scene.rs
brainworms_lib/src/the_great_mind_palace_of_theatrical_arts/play/backstage/: plumbing.rs  pyrotechnics.rs
brainworms_lib/src/the_great_mind_palace_of_theatrical_arts/play/backstage/plumbing/: asset_loader.rs
brainworms_lib/src/the_great_mind_palace_of_theatrical_arts/play/backstage/pyrotechnics/: kinetic_narrative.rs
brainworms_lib/src/the_great_mind_palace_of_theatrical_arts/play/scene/: actors.rs  chorus.rs  definitions.rs  stage3d.rs
lfs_scam/: test_markup.txt
lfs_scam/inochi2d-models/: arrows-doublespringpendulum.inp  arrows-doublespringpendulum.inx
lfs_scam/props/: fried_egg.blend  fried_egg.glb
lib/src/: demo_boids.rs  demo_polygon.rs  demo_raymarching.rs  game.rs  kinetic_novel.rs  lib.rs  program.rs
proc-macros/: Cargo.toml
proc-macros/src/: lib.rs
proc-macros/src/derive_scenic_partial/: analyze.rs  lower.rs  parse.rs
proc-macros/tests/derive_scenic_partial/: ui.rs
proc-macros/tests/derive_scenic_partial/fail/: invalid_syntax.rs  invalid_syntax.stderr
proc-macros/tests/derive_scenic_partial/pass/: valid_syntax.rs
src/: brainworms.rs  curtain.rs  game.rs  hot_lib.rs  kinetic_novel.rs  linac_lab.rs  play.rs  runner.rs  the_great_mind_palace_of_theatrical_arts.rs
src/backstage/: plumbing.rs  pyrotechnics.rs
src/backstage/plumbing/: frame_rate.rs
src/backstage/pyrotechnics/: kinetic_narrative.rs
src/play/: stage3d.rs
src/the_great_mind_palace_of_theatrical_arts/: basement.rs  play.rs
src/the_great_mind_palace_of_theatrical_arts/basement/: cla.rs  debug_profiling_etc.rs  frame_rate.rs  input_handling.rs  logging.rs  platform_scancodes.rs  quad_damage.rs  resize_observer.rs
src/the_great_mind_palace_of_theatrical_arts/basement/grab/: wasm.rs
src/the_great_mind_palace_of_theatrical_arts/play/: backstage.rs  definition.rs  orchestra.rs  scene.rs
src/the_great_mind_palace_of_theatrical_arts/play/backstage/: plumbing.rs
src/the_great_mind_palace_of_theatrical_arts/play/backstage/plumbing/: asset_loader.rs  interactive_object.rs
src/the_great_mind_palace_of_theatrical_arts/play/scene/: actors.rs  chorus.rs  props.rs  stage3d.rs
src/the_great_mind_palace_of_theatrical_arts/play/scene/definitions/: linac_lab.rs
