[package]
name = "brainworms"
authors = ["divine inspiration (from brain parasites)"]
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/pillowtrucker/BRAINWORMS"
license = "AGPL-3.0-or-later"
repository = "https://github.com/pillowtrucker/BRAINWORMS"
description = "a programme"
keywords = ["wgpu", "wasm", "rend3", "not-bevy", "no-ecs", "game", "program"]

[dependencies]
wgpu = { version = "0.18.0", default-features = false }
egui = "0.24.1"
pollster = "0.3.0"
log = "0.4.20"
winit = "0.29.4"

env_logger = "0.10.1"
wasm-bindgen = "0.2.89"

egui-wgpu = { version = "0.24.1", features = ["winit"] }
#egui-winit = { version = "0.24.1", default-features = false, features = ["clipboard", "links", "wayland"] }

# Linear algebra library
glam = "0.24"
# Importing png's
image = { version = "0.24.3", default-features = false, features = ["png"] }
# Renderer core
rend3 = { version = "^0.3.0",path = "rend3/rend3" }
# Egui renderer integration
rend3-egui = { version = "^0.3.0",path = "rend3/rend3-egui" }
# Framework that deals with the event loop, setting up the renderer, and platform differences.
rend3-framework = { version = "^0.3.0", path = "rend3/rend3-framework" }
# Programmable render list that dictates how the scene renders
rend3-routine = { version = "^0.3.0",path = "rend3/rend3-routine" }
# Opening URL's
webbrowser = "0.8.2"

bytemuck = { version = "1.14.0", features = ["derive"] }
instant = "0.1.12"
nanorand = { version = "0.7", default-features = false, features = ["wyrand"] }

[features]
webgl = ["wgpu/webgl"]
wgsl = ["wgpu/wgsl"]
default = ["webgl"]

[[bin]]
name = "brainworms"
path = "src/brainworms.rs"


[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 1

[target.'cfg(not(target_family = "wasm"))'.dependencies]
egui-winit = { version = "0.24.1", default-features = false, features = ["clipboard", "links", "wayland"] }
notify = "6.1.1"
rust-embed = "8.1.0" # Enable shader hot reload for native compilation.
[target.'cfg(target_family = "wasm")'.dependencies]
egui-winit = { version = "0.24.1", default-features = false, features = ["links"] }
wasm-bindgen-futures = "0.4.39"
web-sys = "=0.3.64"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
# Embed shaders in wasm.
rust-embed = { version = "8.0.0", features = ["debug-embed"] }
