[package]
name = "brainworms"
authors = ["divine inspiration (from brain parasites)"]
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/pillowtrucker/BRAINWORMS"
license = "AGPL-3.0-or-later"
repository = "https://github.com/pillowtrucker/BRAINWORMS"
description = "a programme"
keywords = ["wgpu", "rend3", "not-bevy", "no-ecs", "game", "program"]

[dependencies]

brainworms_lib = {path = "./brainworms_lib"}
[[bin]]
name = "brainworms"
path = "src/brainworms.rs"

[profile.dev]
opt-level = 0

[profile.dev.package."brainworms_lib"]
opt-level = 0
[profile.dev.package."*"]
opt-level = 1
[package.metadata.android]
build_targets = ["aarch64-linux-android"]
assets = "resources"

[package.metadata.android.sdk]
min_sdk_version = 28
target_sdk_version = 28
compile_sdk_version = 28

[package.metadata.android.application.activity]
orientation = "landscape"
[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.7"

[workspace]
members = [ "brainworms_arson", "brainworms_lib",
"proc-macros"
]
[features]
extra_debugging = ["brainworms_lib/extra_debugging"]
