[package]
name = "brainworms_farting_noises"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cubeb = {git = "https://github.com/mozilla/cubeb-rs"}
libymfm = {path = "./libymfm.wasm"}
ustr = "1"
glicol_synth = "0.13"
