[package]
name = "brainworms_lib"
authors = ["divine inspiration (from brain parasites)"]
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/pillowtrucker/BRAINWORMS"
license = "AGPL-3.0-or-later"
repository = "https://github.com/pillowtrucker/BRAINWORMS"
description = "a programme"
keywords = ["wgpu", "rend3", "not-bevy", "no-ecs", "game", "program"]


[dependencies]
brainworms_arson = {path = "../brainworms_arson"}
brainworms_farting_noises = {path = "../brainworms_farting_noises"}
wgpu = { version = "0.18.0", default-features = false }

pollster = "0.3.0"
log = "0.4.20"
winit = "0.29.10"

env_logger = "0.10.2"


#egui-winit = { version = "0.24.1", default-features = false, features = ["clipboard", "links", "wayland"] }

# Linear algebra library
glam = "0.24"
# Importing png's
image = { version = "0.24.3", default-features = false, features = ["png","jpeg","tiff"] }
# Renderer core
rend3 = { version = "^0.3.0",path = "../rend3/rend3" }

rend3-gltf = { version = "^0.3.0",path = "../rend3/rend3-gltf" }
# Egui renderer integration
rend3-egui = { version = "^0.3.0",path = "../rend3/rend3-egui" }
# Framework that deals with the event loop, setting up the renderer, and platform differences.
#rend3-framework = { version = "^0.3.0", path = "rend3/rend3-framework" }
# Programmable render list that dictates how the scene renders
rend3-routine = { version = "^0.3.0",path = "../rend3/rend3-routine" }
# Opening URL's
webbrowser = "0.8.2"
inox2d = {path = "../inox2d/inox2d"}
inox2d-wgpu = {path = "../inox2d/inox2d-wgpu"}
bytemuck = { version = "1.14.0", features = ["derive"] }

pico-args = "0.5"
wgpu-profiler = "0.15.0"
#gluon = {git = "https://github.com/gluon-lang/gluon", branch = "master"}

cfg-if = "1"
indoc = "2"
profiling = { version = "1", default-features = false }
uuid = "1.7.0"
parking_lot = "0.12.1"
thiserror = { version = "1" }
#rayon = "1.8"

tokio = { version = "1", features = ["full"] }

notify = "6.1.1"
rust-embed = "8.2.0" # Enable shader hot reload for native compilation.
enum_dispatch = "0.3.12"
parry3d = "0.13"
nalgebra = {version = "0.32", features = ["convert-glam024"]}
gltf = { version = "1.0", default-features = false, features = ["KHR_lights_punctual", "KHR_texture_transform", "KHR_materials_unlit", "extras", "names", "utils"] }
proc_macros = {path = "../proc-macros"}

[package.metadata.android]
build_targets = ["aarch64-linux-android"]
assets = "resources"

[package.metadata.android.sdk]
min_sdk_version = 28
target_sdk_version = 28
compile_sdk_version = 28

[package.metadata.android.application.activity]
orientation = "landscape"
[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.7"

[features]
extra_debugging = []
